# authentication/serializers.py
@@ -7,21 +7,13 @@ from rest_framework.validators import UniqueValidator
 
 class RegisterSerializer(ModelSerializer):
 
-    email = serializers.EmailField(
-            required=True,
-            validators=[UniqueValidator(queryset=get_user_model().objects.all())]
-            )
-
     password = serializers.CharField(write_only=True, required=True, validators=[validate_password])
     password2 = serializers.CharField(write_only=True, required=True)
 
     class Meta:
         model = get_user_model()
-        fields = ('username', 'password', 'password2', 'email', 'first_name', 'last_name')
-        extra_kwargs = {
-            'first_name': {'required': True},
-            'last_name': {'required': True}
-        }
+        fields = ('username', 'password', 'password2')
+
 
     def validate(self, attrs):
         if attrs['password'] != attrs['password2']:
@@ -32,9 +24,6 @@ class RegisterSerializer(ModelSerializer):
     def create(self, validated_data):
         user = get_user_model().objects.create(
             username=validated_data['username'],
-            email=validated_data['email'],
-            first_name=validated_data['first_name'],
-            last_name=validated_data['last_name']
         )
 
         user.set_password(validated_data['password'])
